--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,284 @@
+/*====================BASIC SETUP=================*/
+*,
+*::after,
+*::before {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+/* body{
+    Dark-Blue: rgb(43, 56, 69);
+    Very-Dark-Blue: rgb(32, 44, 54);
+    Very-Dark-Blue: rgb(17, 21, 23);
+    Dark-Gray: rgb(132, 132, 132);
+    Very-Light-Gray: rgb(249, 249, 249);
+White: rgb(255, 255, 255);
+} */
+
 .App {
-  text-align: center;
+    color: white;
+    font-size: 14px;
+    font-family: 'Nunito Sans', sans-serif;
+    background: rgb(32, 44, 54);
+}
+/*====================NAV ELEMENT=================*/
+nav {
+    padding: 2rem 0;
+    background: rgb(43, 56, 69);
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.47);
+    z-index: 20000000;
+    position: relative;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+nav h1 {
+    font-size: 1rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+nav div {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 95%;
+    margin: auto;
+
 }
 
-.App-link {
-  color: #61dafb;
+@media screen and (min-width: 75rem) {
+    nav div {
+        max-width: 88rem;
+        margin: auto;
+    }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+nav button {
+    border: none;
+    background: none;
+    color: white;
+}
+/*====================BUTTON STYLING=================*/
+.mini-button {
+    border: none;
+    color: white;
+    padding: 0.5rem 1.5rem;
+    background-color: rgb(43, 56, 69);
+    border-radius: 3px;
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.47);
+    cursor: pointer;
+}
+
+/*====================SEARCH MENUS=================*/
+.search-options {
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-evenly;
+    height: 11rem;
+    padding: 0 1rem;
+}
+
+@media screen and (min-width: 36rem) {
+    .search-options {
+        flex-direction: row;
+        margin-top: 2rem;
+        justify-content: space-between;
+    }
+}
+
+@media screen and (min-width: 75rem) {
+    .search-options {
+        max-width: 88rem;
+    }
+}
+
+.search-box {
+    height: 3rem;
+    width: 100%;
+    max-width: 22rem;
+    border: none;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    font-size: 1.5rem;
+    padding-left: 2rem;
+    background: rgb(43, 56, 69);
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.47);
+}
+
+#search-input {
+    width: 100%;
+    border: none;
+    height: 100%;
+    margin-left: 1rem;
+    background: none;
+    color: white;
+
+}
+
+.custom-select {
+    background: rgb(43, 56, 69);
+    border: none;
+    width: 12rem;
+    color: white;
+    height: 3rem;
+    border-radius: 5px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    font-size: 0.8rem;
+    cursor: pointer;
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.47);
+}
+
+.custom-options {
+    position: absolute;
+    bottom: -9.5rem;
+    background: rgb(43, 56, 69);
+    width: 100%;
+    padding: 1rem 2rem;
+    list-style: none;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.47);
+}
+
+/*====================HOME SECTION LIST OF COUNTRIES=================*/
+@media screen and (min-width: 48rem) {
+    .country-list {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (min-width: 62rem) {
+    .country-list {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media screen and (min-width: 75rem) {
+    .country-list {
+        grid-template-columns: repeat(4, 1fr);
+        max-width: 88rem;
+        margin: auto;
+    }
+}
+
+.country-card {
+    height: 21rem;
+    width: 17rem;
+    margin: 1.5rem auto;
+    border-radius: 5px;
+    overflow: hidden;
+    background: url(https://restcountries.eu/data/col.svg);/*NEEDS DELETING*/
+    background-color: rgb(43, 56, 69);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    padding-top: 12rem;
+    padding-left: 2rem;
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.47);
+}
+
+.country-card h1 {
+    margin-bottom: 1rem;
+}
+
+.country-card ul {
+    list-style: none;
+}
+
+/*====================SECTION COUNTRY DETAILS=================*/
+.country-detail-container {
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding-top: 7rem;
+}
+
+.return-button {
+    margin-left: 2rem;
+    font-size: 1.1rem;
+}
+
+.country-details {
+    margin: auto;
+    width: 90%;
+    margin-top: 4rem;
+}
+
+@media screen and (min-width: 62rem) {
+    .country-details {
+        width: 95%;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        max-width: 80rem;
+        margin-top: 5rem;
+    }
+}
+
+.country-details h2 {
+    padding-left: 1rem;
+    margin-bottom: 1.5rem;
+}
+
+.country-details img {
+    width: 95%;
+    border-radius: 2px;
+    margin: auto;
+    margin-bottom: 3rem;
+    display: inherit;
+}
+
+@media screen and (min-width: 23.5rem) {
+    .country-details img {
+        max-width: 25rem;
+    }
+}
+
+@media screen and (min-width: 62rem) {
+    .country-details img {
+        margin: 0rem;
+        height: 20rem;
+    }
+}
+
+.info-container ul {
+    list-style: none;
+    padding-left: 1rem;
+    margin-bottom: 1.5rem;
+}
+
+@media screen and (min-width: 62rem) {
+    .info-container ul {
+        padding-left: 0;
+        padding-right: 2rem;
+    }
+}
+
+.country-details div li {
+    line-height: 2rem;
+}
+
+.border-container {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 1rem;
+    flex-wrap: wrap;
+    width: 100%;
+    max-width: 27rem;
+}
+
+.border-container button {
+    font-size: 0.7rem;
+    margin-bottom: 1rem;
+}
+
+@media screen and (min-width: 62rem) {
+    .info-container {
+        display: flex;
+    }
 }
