--- a/src/App.css
+++ b/src/App.css
@@ -168,26 +168,31 @@ nav button {
 }
 
 .country-card {
-    height: 21rem;
     width: 17rem;
     margin: 1.5rem auto;
     border-radius: 5px;
     overflow: hidden;
-    background: url(https://restcountries.eu/data/col.svg);/*NEEDS DELETING*/
     background-color: rgb(43, 56, 69);
-    background-size: 100%;
-    background-repeat: no-repeat;
-    padding-top: 12rem;
-    padding-left: 2rem;
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.47);
+}
+.country-card div {
+	height: 12em;
+	width: 100%;
+	background-size: cover;
+	margin-bottom: 2rem;
+	background-position: center;
 }
 
 .country-card h1 {
     margin-bottom: 1rem;
+    margin-left: 1.5rem;
 }
 
 .country-card ul {
     list-style: none;
+    margin-left: 1.5rem;
+    margin-right: 1rem;
+    margin-bottom: 2rem;
 }
 
 /*====================SECTION COUNTRY DETAILS=================*/
