--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@ White: rgb(255, 255, 255);
     font-family: 'Nunito Sans', sans-serif;
     background: rgb(32, 44, 54);
     min-height: 100vh;
+    padding-bottom: 5rem;
 }
 /*====================NAV ELEMENT=================*/
 nav {
@@ -75,7 +76,6 @@ nav button {
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-evenly;
-    height: 11rem;
     padding: 0 1rem;
 }
 
@@ -143,8 +143,11 @@ nav button {
     border-radius: 5px;
     cursor: pointer;
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.47);
+    display: none;
 }
-
+.revealed{
+    display: block;
+}
 /*====================HOME SECTION LIST OF COUNTRIES=================*/
 @media screen and (min-width: 48rem) {
     .country-list {
@@ -174,6 +177,7 @@ nav button {
     overflow: hidden;
     background-color: rgb(43, 56, 69);
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.47);
+    cursor: pointer;
 }
 .country-card div {
 	height: 12em;
