--- a/src/App.css
+++ b/src/App.css
@@ -7,15 +7,6 @@
     box-sizing: border-box;
 }
 
-/* body{
-    Dark-Blue: rgb(43, 56, 69);
-    Very-Dark-Blue: rgb(32, 44, 54);
-    Very-Dark-Blue: rgb(17, 21, 23);
-    Dark-Gray: rgb(132, 132, 132);
-    Very-Light-Gray: rgb(249, 249, 249);
-White: rgb(255, 255, 255);
-} */
-
 .App {
     color: white;
     font-size: 14px;
@@ -24,6 +15,7 @@ White: rgb(255, 255, 255);
     min-height: 100vh;
     padding-bottom: 5rem;
 }
+
 /*====================NAV ELEMENT=================*/
 nav {
     padding: 2rem 0;
@@ -54,17 +46,19 @@ nav div {
 }
 
 nav button {
-	border: none;
-	background: none;
-	color: white;
-	padding: 0.4rem 0rem;
+    border: none;
+    background: none;
+    color: white;
+    padding: 0.4rem 0rem;
     border-bottom: solid #fff0 1px;
     transition: all 200ms;
     cursor: pointer;
 }
+
 nav button:hover {
-	border-bottom: solid rgba(126, 126, 126, 0.55) 1px;
+    border-bottom: solid rgba(126, 126, 126, 0.55) 1px;
 }
+
 /*====================BUTTON STYLING=================*/
 .mini-button {
     border: none;
@@ -76,9 +70,11 @@ nav button:hover {
     cursor: pointer;
     transition: all 200ms;
 }
-.mini-button:hover{
+
+.mini-button:hover {
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.83);
 }
+
 /*====================SEARCH MENUS=================*/
 .search-options {
     margin: auto;
@@ -118,15 +114,17 @@ nav button:hover {
     transition: all 200ms;
     margin: 1rem 0;
 }
+
 @media screen and (min-width: 36rem) {
     .search-box {
-    margin: 0;
+        margin: 0;
     }
 }
 
-.search-box:hover{
+.search-box:hover {
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.83);
 }
+
 #search-input {
     width: 100%;
     border: none;
@@ -152,7 +150,8 @@ nav button:hover {
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.47);
     transition: all 200ms;
 }
-.custom-select:hover{
+
+.custom-select:hover {
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.83);
 }
 
@@ -168,15 +167,19 @@ nav button:hover {
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.47);
     display: none;
 }
+
 .custom-options li {
-	padding: 0.1rem 2rem;
+    padding: 0.1rem 2rem;
 }
+
 .custom-options li:hover {
-	background: #80808082;
+    background: #80808082;
 }
-.revealed{
+
+.revealed {
     display: block;
 }
+
 /*====================HOME SECTION LIST OF COUNTRIES=================*/
 @media screen and (min-width: 48rem) {
     .country-list {
@@ -209,22 +212,24 @@ nav button:hover {
     cursor: pointer;
     transition: all 200ms;
 }
-.country-card:hover{
+
+.country-card:hover {
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.83);
     transform: scale(1.05);
 }
+
 .country-card div {
-	height: 12em;
-	width: 100%;
-	background-size: cover;
-	margin-bottom: 2rem;
-	background-position: center;
+    height: 12em;
+    width: 100%;
+    background-size: cover;
+    margin-bottom: 2rem;
+    background-position: center;
 }
 
 .country-card h1 {
-	margin-bottom: 1rem;
-	margin-left: 1.5rem;
-	margin-right: 1rem;
+    margin-bottom: 1rem;
+    margin-left: 1.5rem;
+    margin-right: 1rem;
 }
 
 .country-card ul {
@@ -287,7 +292,7 @@ nav button:hover {
 @media screen and (min-width: 62rem) {
     .country-details img {
         margin: 0rem;
-        height: 20rem;
+        /* height: 20rem; */
     }
 }
 
@@ -295,6 +300,7 @@ nav button:hover {
     list-style: none;
     padding-left: 1rem;
     margin-bottom: 1.5rem;
+    max-width: 20rem;
 }
 
 @media screen and (min-width: 62rem) {
@@ -318,34 +324,13 @@ nav button:hover {
 }
 
 .border-container button {
-	font-size: 0.7rem;
-	margin-bottom: 1rem;
-	margin-right: 1rem;
+    font-size: 0.7rem;
+    margin-bottom: 1rem;
+    margin-right: 1rem;
 }
 
 @media screen and (min-width: 62rem) {
     .info-container {
         display: flex;
     }
-}
-/*----------------------------------------*/
-.intro-container{
-	position: fixed;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%,-50%);
-	width: 90%;
-	height: 80%;
-	background: #5c5c5cad;
-	max-width: 70rem;
-	max-height: 35rem;
-    border-radius: 10px;
-    z-index: 10000;
-    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
-}
-.intro-container img{
-        height: 10rem;
-        margin: auto;
-        display: block;
-        margin-top: 2rem;
 }
